# japanese-eval-V1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: training_plan.md
examples/: benchmark_websocket.py  post_call_eval.py  sample_call.json
reports/: 20260328_Auto-research_systems_STORM_GPT-Researcher_agen.md  20260328_Japanese_TTS_evaluation_naturalness_prosody_MOS.md  20260328_Japanese_telephony_speech_recognition_real-time_A.md  20260328_Japanese_voice_AI_evaluation_2025-2026_STT_benchm.md  20260328_Japanese_voice_AI_evaluation_STT_benchmarks_TTS_.md  20260328_Japanese_voice_AI_evaluation_state_of_the_art_2024.md  20260328_LLM-as-judge_evaluation_methods_for_voice_agents_.md  20260328_Voice_agent_evaluation_frameworks_VoiceAgentBench.md  20260328_manual_japanese_voice_ai_evaluation_research.md  20260329_Auto-research_systems_STORM_GPT-Researcher_agen.md  20260329_Best_open-source_ASR_models_for_Japanese_telephony.md  20260329_Japanese_ASR_evaluation_benchmarks_CER_metrics_R.md  20260329_Japanese_TTS_evaluation_naturalness_prosody_MOS.md  20260329_Japanese_telephony_speech_recognition_real-time_A.md  20260329_LLM-as-judge_for_voice_agent_conversation_quality.md  20260329_Voice_agent_evaluation_frameworks_VoiceAgentBench.md
results/model_selection/: comparison.md  deepgram_baseline.json  granite_speech.json  kotoba_whisper.json  whisper_v3.json  (+4 more)
scripts/: benchmark_candidates.sh  train_qwen3_lora.py
tests/: test_cli.py  test_integration.py
topics/: default_research_topics.txt  remaining_topics.txt
(+63 files in other folders)
